update readme and title updated in html templates

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ReactJS Boilerplate</title>
+    <title>Newcross Booking</title>
 </head>
 <body>
 
